Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17196

crash on sudden bearer down (connection loss) during a QNetworkAccessManager download

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.3
    • 4.7.2
    • None
    • Nokia N8
    • 8fe811e14b6db6a9637a5bf6d276613786291762, b1d877e32361e8ca5c092a4df4528e5aa868008f, d0d0763f6e0c7709208ad1c573266ee527f6e4ff, 50e7bea8bb4ce5a97ab8ff9c7062fc0fa092aec0

      During a download, if the network connection is lost the application may crash.
      The easiest way to reproduce this is to power off the AP while using WLAN.

      The observed crashes are data abort or E32User-CBase 49 panic in the ConnectionProgressNotifier::RunL() function.
      These are caused by QNAM deleting the QNetworkSession from the closed signal - when it returns, the active object tries to use its data members after it has been deleted.

      Revealed by change cdc4ce0acde93b23c7e4941b5c195a8d23ff6900, though ConnectionProgressNotifier had latent bugs in 4.7.1

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shkearns Shane Kearns
            shkearns Shane Kearns
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes