Fix random crashes when bearer suddenly goes down

1. QNetworkSession being deleted from the closed signal caused data
   abort or E32User-CBase 49 panics. (both observed)
2. Potential E32User-CBase 46 panic in
   ConnectionProgressNotifier::StartNotifications()

Reviewed-by: Aaron Tunney
Reviewed-By: Markus Goetz

Task-Number: QTBUG-17196