src/network/bearer/qnetworksession.h
@@ -139,6 +139,9 @@ private:
     friend class QNetworkSessionPrivate;
     };
 
+Q_DECLARE_METATYPE(QNetworkSession::State);
+Q_DECLARE_METATYPE(QNetworkSession::SessionError);
+
 #ifndef QT_MOBILITY_BEARER
 QT_END_NAMESPACE
 #else
